Исправлен файл README.md